2013-09-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm (cairopng_write_cropped_image):  Must free cropped image
	and the structure that holds it, otherwise there is a memory leak.
	Bug #1278

	* axis.h (TIC_SCALE):  tics generated from data (e.g. xticlabels(COL))
	get same size tic marks as major tics.
	Bug #1280

2013-09-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/misc.c src/misc.h src/plot.c:  Clean up code,
	remove unused variables, add comments, new parameter to load_file(),
	all in preparation for a revision to the "call" mechanism.

	* src/scanner.c (scanner):  The syntactic entity $# (number of arguments
	in a call statment) has been mishandled as introducing a comment since
	sometime in version 4.5.  Trap it as a special case in the scanner.

	* src/misc.c src/plot.c:  New command line option 
	"gnuplot -c scriptfile ARG1 ARG2 ... " executes scriptfile using 
	"call" rather "load" and passes arguments ARG1 ARG2 etc.  
	This patch leaves the old call argument convention in place
	$0 = ARG1,  $1 = ARG2, etc, $# = number of arguments
	but a future patch series will introduce a more C-like convention
	for the arguments.  Modified from an original patch by Shige Takeno.

2013-09-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c src/color.h src/eval.c src/eval.h src/plot.c src/plot.h
	src/set.c src/show.c src/unset.c docs/gnuplot.doc:

	- Consolidate code called on program entry and during "reset".
	- Group program-defined variables (pi, NaN, GNUTERM) at the start of the
	  udv list and protect them from deletion.
	- New command "reset session" does a reset followed by loading gnuplotrc
	  and ~/.gnuplot.  It also deletes (actually undefines) all user-defined
	  variables. This puts the program in approximately the same state as it
	  was on first entry.
	- Fixes memory leak; palette functions were reset without being freed.

2013-09-01  Peter Juhasz  <juhaszp@users.sourceforge.net>
