@@ -1,12 +1,19 @@
 2013-09-09  Ethan A Merritt  <merritt@u.washington.edu>
 
-	* term/cairo.trm (cairopng_write_cropped_image):  Must free cropped image
+	* term/cairo.trm (cairopng_write_cropped_image): Must free cropped image
 	and the structure that holds it, otherwise there is a memory leak.
 	Bug #1278
 
 	* axis.h (TIC_SCALE):  tics generated from data (e.g. xticlabels(COL))
 	get same size tic marks as major tics.
 	Bug #1280
+
+	* pm3d.c (set_plot_with_palette): "tc variable" was incorrectly causing
+	the color bar to be drawn by default.
+
+	* graphics.c (check_for_variable_color): "lc variable" should index the
+	line _type_ (not _style_) colors unless "set style increment user".
+	Bug #1281
 
 2013-09-08  Ethan A Merritt  <merritt@u.washington.edu>
 
